--- a/index.html
+++ b/index.html
@@ -88,9 +88,10 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="block text-center">
-                    <h1 class="animated fadeInUp text-uppercase">Get Me Life, LLC</h1>
+                    <h1 class="animated fadeInUp text-uppercase">GetMeLife.com</h1>
+                    <h2>It can be yours!</h2>
+                    <a class="btn btn-main btn-solid-border" href="mailto:sales@getmelife.com">Make an Offer</a>
                     <p class="animated fadeInUp">sales@getmelife.com</p>
-                    <a class="btn btn-main btn-solid-border" href="mailto:sales@getmelife.com" >Offer a Price</a>
                 </div>
             </div>
         </div>
