--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
             <div class="col-md-10 col-md-offset-1">
                 <div class="block text-center">
                     <h1 class="animated fadeInUp text-uppercase">GetMeLife.com</h1>
-                    <h2>It can be yours!</h2>
+                    <h1>It can be yours!</h1>
                     <a class="btn btn-main btn-solid-border" href="mailto:sales@getmelife.com">Make an Offer</a>
-                    <p class="animated fadeInUp">sales@getmelife.com</p>
+                    <h3 class="animated fadeInUp">sales@getmelife.com</h3>
                 </div>
             </div>
         </div>
