--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="block text-center">
-                    <h1 class="animated fadeInUp text-uppercase">GetMeLife.com</h1>
-                    <h1>It can be yours!</h1>
+                    <h1 class="animated fadeInUp">GetMeLife.com</h1>
+                    <h2 style="padding-bottom: 20px;">It can be yours!</h2>
                     <a class="btn btn-main btn-solid-border" href="mailto:sales@getmelife.com">Make an Offer</a>
                     <h3 class="animated fadeInUp">sales@getmelife.com</h3>
                 </div>
